--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -10,20 +10,27 @@ jobs:
   test:
     name: Build
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        go_version: [ "~1.18", "~1.19", "~1.20" ]
+
     steps:
-    - uses: actions/setup-go@v2
-      with:
-        go-version-file: 'go.mod'
+      - uses: actions/setup-go@v3
+        with:
+          go-version: "${{ matrix.go_version }}"
+          cache: true
 
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v3
 
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
 
-    - name: Build
-      run: go build -v .
+      - name: Get dependencies
+        run: |
+          go get -v -t -d ./...
 
-    - name: Test
-      run: go test ./...
+      - name: Build
+        run: go build -v .
+
+      - name: Test
+        run: go test ./...
