--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,21 +16,16 @@ jobs:
         go_version: [ "~1.18", "~1.19", "~1.20" ]
 
     steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
+
       - uses: actions/setup-go@v3
         with:
           go-version: "${{ matrix.go_version }}"
           cache: true
 
-
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
-
       - name: Get dependencies
-        run: |
-          go get -v -t -d ./...
-
-      - name: Build
-        run: go build -v .
+        run: go get -v -t -d ./...
 
       - name: Test
         run: go test ./...
