--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,5 +4,6 @@
     "local>trim21/renovate-config",
     "local>trim21/renovate-config:go"
   ],
+  "schedule": [],
   "separateMinorPatch": true
 }
