chore: config renovatebot

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -4,6 +4,9 @@
     "local>trim21/renovate-config",
     "local>trim21/renovate-config:go"
   ],
-  "schedule": [],
-  "separateMinorPatch": true
+  "schedule": [
+    "every 12 months on the first day of the month"
+  ],
+  "separateMinorPatch": true,
+  "prCreation": "immediate"
 }
